[package]
name = "confidential-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bs58 = "0.5.1"
clap = { version = "4.5.50", features = ["derive"] }
solana-cli-config = "3.0.8"
solana-client = "3.0.8"
solana-program = "3.0.0"
solana-sdk = "3.0.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.17.0"
tokio = { version = "1.48.0", features = ["full"] }
