[package]
name = "confidential-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bs58 = "0.5.1"
bytemuck = "1.24.0"
clap = { version = "4.5.50", features = ["derive"] }
solana-cli-config = "2.3.13"
solana-client = "2.3.13"
solana-program = "2.3.0"
solana-sdk = "2.3.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.17.0"
spl-token-confidential-transfer-proof-extraction = "0.4.1"
tokio = { version = "1.48.0", features = ["full"] }
